# lumimind

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt  server.py
api/: app.py  pyproject.toml
app/: __init__.py  audio.py  codec.py  connection.py  handler.py  llm.py  manager.py  memory.py  message.py  router.py  schemas.py  server.py  utils.py  websocket_server.py
app/agent/: qwen.py
app/asr/: sensevoice.py
app/chat/: qwen.py
app/config/: settings.py
app/core/: connection_handler.py
app/infra/: __init__.py  asr_provider.py  iot_provider.py  llm_provider.py  tts_provider.py  vad_provider.py
app/schemas/: iot_function_schemas.py  iot_message_schemas.py
app/services/: __init__.py  agent_service.py  audio_service.py  chat_service.py
app/toolcall/: iot.py
app/tts/: cosyvoice.py
app/utils/: audio.py  stream.py
assets/: agent_prompt_text.txt  prompt_text.txt
scripts/: download_models.py
tests/: test_agent_service.py  test_audio_service.py
