[project]
name = "liiaa"
version = "0.1.0"
description = "A websocket server that voice chat with llm."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fish-audio-sdk>=2025.2.11",
    "funasr>=1.2.5",
    "loguru>=0.7.3",
    "openai>=1.65.3",
    "opuslib>=3.0.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pydub>=0.25.1",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[tool.ruff.lint]
select = [
    "I", # isort
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # pyflakes
    "B", # flake8-bugbear
]
